2006-09-05  Richard Ferguson <ubuntu@fergusnet.com>

    * olive.glade: cleaned up information dialog
    * olive/frontend/gtk/info.py:
	
2006-09-04  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * RELEASE: Olive 0.10.0
    * setup.py: tweaked the po building a bit

2006-09-03  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/__init__.py: bumped the version number to be consistent
      with Bazaar
    * olive/frontend/gtk/__init__.py: fixed a bug regarding menu item activation

2006-09-02  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * po/olive-gtk.pot: regenerated
    * olive/backend/errors.py: added ConnectionError exception
    * olive/frontend/gtk/handler.py: implemented Missing revisions menu handler
    * olive.glade: added Branch/Missing revisions menu item
    * olive/backend/update.py: added NotBranchError and ConnectionError
      exceptions to missing()
    * olive/frontend/gtk/add.py: fixed a small bug (switch back to default
      cursor)
    * olive/frontend/gtk/remove.py: fixed a small bug (switch back to default
      cursor)

2006-08-31  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/viz/diffwin.py: merged from bzr-gtk 0.10
    * olive/frontend/gtk/viz/branchwin.py: merged from bzr-gtk 0.10

2006-08-29  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/backend/update.py: fixed a bug if bundles not available under bzr
      0.8.2 (Fixed: #57761)
    * Merge from Stéphane's branch.
    * po/olive-gtk.pot: regenerated
    * po/hu.po: msginit'ed

2006-08-20  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * setup.py: some little corrections (python path + bazaar branding)
    * COPYING.txt: GPL added
    * TODO: renamed to TODO.txt
    * README: renamed to README.txt; added bugreporting section
    * debian/: added debian directory for Ubuntu package
    * olive-gtk: change python path
    * olive.glade: temporarily change the Diff menubutton to a toolbutton